crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__explain_tests__explain__select_where_no_variable.snap
---
source: crates/tests/databases-tests/src/postgres/explain_tests.rs
expression: result.details.query
---
EXPLAIN
SELECT
  coalesce(json_agg("%5_universe_agg"."universe"), '[]') AS "universe"
FROM
  (
    SELECT
      row_to_json("%2_universe") AS "universe"
    FROM
      json_to_recordset(cast($1 as json)) AS "%0_%variables_table"("%variable_order" int)
      CROSS JOIN LATERAL (
        SELECT
          *
        FROM
          (
            SELECT
              coalesce(json_agg(row_to_json("%3_rows")), '[]') AS "rows"
            FROM
              (
                SELECT
                  "%1_Album"."Title" AS "Title"
                FROM
                  "public"."Album" AS "%1_Album"
                WHERE
                  (
                    "%1_Album"."Title" ~~ cast("%0_%variables_table"."search" as varchar)
                  )
                ORDER BY
                  "%1_Album"."AlbumId" ASC
              ) AS "%3_rows"
          ) AS "%3_rows"
      ) AS "%2_universe"
    ORDER BY
      "%0_%variables_table"."%variable_order" ASC
  ) AS "%5_universe_agg"
